--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "XSteam"
 uuid = "95ff35a0-be81-11e9-2ca3-5b4e338e8476"
 authors = ["Administrator "]
 version = "0.1.0"
+
+[compat]
+julia = "1"
